Update examples for dark mode

--- a/src/pages/docs/accent-color.mdx
+++ b/src/pages/docs/accent-color.mdx
@@ -21,13 +21,13 @@ Use the `accent-{color}` utilities to change the accent color of an element. Thi
   <div class="flex flex-wrap justify-center gap-6">
     <label class="flex items-center space-x-2">
       <input type="checkbox" checked>
-      <div class="text-gray-900 text-sm font-semibold">
+      <div class="text-gray-900 text-sm font-semibold dark:text-gray-200">
         Browser default
       </div>
     </label>
     <label class="flex items-center space-x-2">
       <input type="checkbox" class="accent-pink-500" checked>
-      <div class="text-gray-900 text-sm font-semibold">
+      <div class="text-gray-900 text-sm font-semibold dark:text-gray-200">
         Customized
       </div>
     </label>
