--- a/src/pages/docs/appearance.mdx
+++ b/src/pages/docs/appearance.mdx
@@ -24,7 +24,7 @@ Use `appearance-none` to reset any browser specific styling on an element. This 
         <option>No</option>
         <option>Maybe</option>
       </select>
-      <div class="mx-6 text-gray-900 text-sm font-semibold">
+      <div class="mx-6 text-gray-900 text-sm font-semibold dark:text-gray-200">
         Default browser styles applied
       </div>
     </div>
@@ -34,7 +34,7 @@ Use `appearance-none` to reset any browser specific styling on an element. This 
         <option>No</option>
         <option>Maybe</option>
       </select>
-      <div class="mx-6 text-gray-900 text-sm font-semibold">
+      <div class="mx-6 text-gray-900 text-sm font-semibold dark:text-gray-200">
         Default styles removed
       </div>
     </div>
