--- a/src/pages/docs/caret-color.mdx
+++ b/src/pages/docs/caret-color.mdx
@@ -19,7 +19,7 @@ Use the `caret-{color}` utilities to change the color of the text input cursor.
 
 <Example hint="Focus the textarea to see the new caret color">
   <div class="w-full flex items-center justify-center">
-    <textarea class="text-sm p-2 w-80 ring-1 ring-gray-900/10 shadow-sm rounded-md focus:outline-none focus:ring-2 focus:ring-pink-500 caret-pink-500" rows="2"></textarea>
+    <textarea class="text-sm p-2 w-80 ring-1 ring-gray-900/10 shadow-sm rounded-md focus:outline-none focus:ring-2 focus:ring-pink-500 caret-pink-500 dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:focus:ring-2 dark:focus:ring-pink-500 dark:focus:bg-gray-900" rows="2"></textarea>
   </div>
 </Example>
 
