--- a/src/pages/docs/float.mdx
+++ b/src/pages/docs/float.mdx
@@ -16,7 +16,7 @@ export const classes = { utilities }
 Use `float-right` to float an element to the right of its container.
 
 <Example resizable p="none">
-  <div class="mx-4 bg-white shadow-xl p-8 text-gray-700">
+  <div class="mx-4 bg-white shadow-xl p-8 text-gray-700 dark:bg-gray-800 dark:text-gray-400">
     <div class="float-right ml-6">
       <div class="relative aspect-w-4 aspect-h-5 sm:aspect-w-16 sm:aspect-h-9 w-20 sm:w-44">
         <img class="object-cover rounded-lg" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&q=80" />
@@ -37,7 +37,7 @@ Use `float-right` to float an element to the right of its container.
 Use `float-left` to float an element to the left of its container.
 
 <Example resizable p="none">
-  <div class="mx-4 bg-white shadow-xl p-8 text-gray-700">
+  <div class="mx-4 bg-white shadow-xl p-8 text-gray-700 dark:bg-gray-800 dark:text-gray-400">
     <div class="float-left mr-6">
       <div class="relative aspect-w-4 aspect-h-5 sm:aspect-w-16 sm:aspect-h-9 w-20 sm:w-44">
         <img class="object-cover rounded-lg" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&q=80" />
@@ -58,7 +58,7 @@ Use `float-left` to float an element to the left of its container.
 Use `float-none` to reset any floats that are applied to an element. This is the default value for the float property.
 
 <Example resizable p="none">
-  <div class="mx-4 bg-white shadow-xl p-8 text-gray-700">
+  <div class="mx-4 bg-white shadow-xl p-8 text-gray-700 dark:bg-gray-800 dark:text-gray-400">
     <div class="inline-block relative mb-4">
       <div class="relative aspect-w-16 aspect-h-9 w-44">
         <img class="object-cover rounded-lg" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&q=80" />
