--- a/src/pages/docs/font-style.mdx
+++ b/src/pages/docs/font-style.mdx
@@ -19,13 +19,13 @@ The `italic` utility can be used to make text italic. Likewise, the `not-italic`
   <div class="flex flex-col gap-8">
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">italic</span>
-      <p class="italic text-lg font-medium text-gray-900">
+      <p class="italic text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">not-italic</span>
-      <p class="not-italic text-lg font-medium text-gray-900">
+      <p class="not-italic text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
