--- a/src/pages/docs/font-variant-numeric.mdx
+++ b/src/pages/docs/font-variant-numeric.mdx
@@ -45,7 +45,7 @@ Use the `ordinal` utility to enable special glyphs for the ordinal markers.
 -- column
 
 <Example>
-  <p class="font-source ordinal text-center text-gray-700 text-lg">1st</p>
+  <p class="font-source ordinal text-center text-gray-900 text-lg dark:text-gray-200">1st</p>
 </Example>
 
 ```html
@@ -63,7 +63,7 @@ Use the `slashed-zero` utility to force a 0 with a slash; this is useful when a 
 -- column
 
 <Example>
-  <p class="font-source slashed-zero text-center text-gray-700 text-lg">0</p>
+  <p class="font-source slashed-zero text-center text-gray-900 text-lg dark:text-gray-200">0</p>
 </Example>
 
 ```html
@@ -81,7 +81,7 @@ Use the `lining-nums` utility to use the numeric glyphs that are all aligned by 
 -- column
 
 <Example>
-  <p class="font-source lining-nums text-center text-gray-700 text-lg">1234567890</p>
+  <p class="font-source lining-nums text-center text-gray-900 text-lg dark:text-gray-200">1234567890</p>
 </Example>
 
 ```html
@@ -101,7 +101,7 @@ Use the `oldstyle-nums` utility to use numeric glyphs where some numbers have de
 -- column
 
 <Example>
-  <p class="font-source oldstyle-nums text-center text-gray-700 text-lg">1234567890</p>
+  <p class="font-source oldstyle-nums text-center text-gray-900 text-lg dark:text-gray-200">1234567890</p>
 </Example>
 
 ```html
@@ -122,8 +122,8 @@ Use the `proportional-nums` utility to use numeric glyphs that have proportional
 
 <Example>
   <div class="max-w-sm text-right">
-    <p class="font-source proportional-nums text-gray-700 text-lg">12121</p>
-    <p class="font-source proportional-nums text-gray-700 text-lg">90909</p>
+    <p class="font-source proportional-nums text-gray-900 text-lg dark:text-gray-200">12121</p>
+    <p class="font-source proportional-nums text-gray-900 text-lg dark:text-gray-200">90909</p>
   </div>
 </Example>
 
@@ -148,8 +148,8 @@ Use the `tabular-nums` utility to use numeric glyphs that have uniform/tabular w
 
 <Example>
   <div class="max-w-sm text-right">
-    <p class="font-source tabular-nums text-gray-700 text-lg">12121</p>
-    <p class="font-source tabular-nums text-gray-700 text-lg">90909</p>
+    <p class="font-source tabular-nums text-gray-900 text-lg dark:text-gray-200">12121</p>
+    <p class="font-source tabular-nums text-gray-900 text-lg dark:text-gray-200">90909</p>
   </div>
 </Example>
 
@@ -173,7 +173,7 @@ Use the `diagonal-fractions` utility to replace numbers separated by a slash wit
 -- column
 
 <Example>
-  <p class="font-source diagonal-fractions text-center text-gray-700 text-lg">1/2 3/4 5/6</p>
+  <p class="font-source diagonal-fractions text-center text-gray-900 text-lg dark:text-gray-200">1/2 3/4 5/6</p>
 </Example>
 
 ```html
@@ -193,7 +193,7 @@ Use the `stacked-fractions` utility to replace numbers separated by a slash with
 -- column
 
 <Example>
-  <p class="font-ubuntu-mono stacked-fractions text-center text-gray-700 text-lg">1/2 3/4 5/6</p>
+  <p class="font-ubuntu-mono stacked-fractions text-center text-gray-900 text-lg dark:text-gray-200">1/2 3/4 5/6</p>
 </Example>
 
 ```html
