--- a/src/pages/docs/list-style-type.mdx
+++ b/src/pages/docs/list-style-type.mdx
@@ -20,7 +20,7 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
   <div class="flex flex-col gap-8">
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">list-disc</span>
-      <ul class="list-disc list-inside text-normal text-gray-900">
+      <ul class="list-disc list-inside text-normal text-gray-900 dark:text-gray-200">
         <li>Now this is a story all about how, my life got flipped turned upside down</li>
         <li>And I like to take a minute and sit right here</li>
         <li>I'll tell you how I became the prince of a town called Bel-Air </li>
@@ -28,7 +28,7 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">list-decimal</span>
-      <ul class="list-decimal list-inside text-normal text-gray-900">
+      <ul class="list-decimal list-inside text-normal text-gray-900 dark:text-gray-200">
         <li>Now this is a story all about how, my life got flipped turned upside down</li>
         <li>And I like to take a minute and sit right here</li>
         <li>I'll tell you how I became the prince of a town called Bel-Air </li>
@@ -36,7 +36,7 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">list-none</span>
-      <ul class="list-none list-inside text-normal text-gray-900">
+      <ul class="list-none list-inside text-normal text-gray-900 dark:text-gray-200">
         <li>Now this is a story all about how, my life got flipped turned upside down</li>
         <li>And I like to take a minute and sit right here</li>
         <li>I'll tell you how I became the prince of a town called Bel-Air </li>
