--- a/src/pages/docs/max-width.mdx
+++ b/src/pages/docs/max-width.mdx
@@ -44,19 +44,19 @@ The `max-w-prose` utility gives an element a max-width optimized for readability
   <div class="space-y-8">
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">text-sm</span>
-      <div class="max-w-prose text-sm font-medium text-gray-900">
+      <div class="max-w-prose text-sm font-medium text-gray-900 dark:text-gray-200">
         <p>Oh yeah. It's the best part. It's crunchy, it's explosive, it's where the muffin breaks free of the pan and sort of does it's own thing. I'll tell you. That's a million dollor idea right there. Just sell the tops.</p>
       </div>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">text-base</span>
-      <div class="max-w-prose text-base font-medium text-gray-900">
+      <div class="max-w-prose text-base font-medium text-gray-900 dark:text-gray-200">
         <p>Oh yeah. It's the best part. It's crunchy, it's explosive, it's where the muffin breaks free of the pan and sort of does it's own thing. I'll tell you. That's a million dollor idea right there. Just sell the tops.</p>
       </div>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">text-xl</span>
-      <div class="max-w-prose text-xl font-medium text-gray-900">
+      <div class="max-w-prose text-xl font-medium text-gray-900 dark:text-gray-200">
         <p>Oh yeah. It's the best part. It's crunchy, it's explosive, it's where the muffin breaks free of the pan and sort of does it's own thing. I'll tell you. That's a million dollor idea right there. Just sell the tops.</p>
       </div>
     </div>
