--- a/src/pages/docs/outline-style.mdx
+++ b/src/pages/docs/outline-style.mdx
@@ -52,8 +52,8 @@ It is highly recommended to apply your own focus styling for accessibility when 
 
 <Example hint="Focus the input to see the expected behaviour">
   <div class="flex flex-col sm:flex-row items-center justify-center gap-x-16 gap-y-8 px-0 sm:px-10 font-mono font-bold">
-    <input type="text" placeholder="Default focus styles" class="font-sans block text-sm w-full py-2 px-3 border border-transparent ring-1 ring-gray-900/10 text-gray-500 rounded-lg shadow-sm" />
-    <input type="text" placeholder="Custom focus styles" class="font-sans block text-sm w-full py-2 px-3 border border-transparent ring-1 ring-gray-900/10 text-gray-500 rounded-lg shadow-sm focus:outline-none focus:ring focus:ring-blue-300 focus:border-blue-500" />
+    <input type="text" placeholder="Default focus styles" class="font-sans block text-sm w-full py-2 px-3 ring-1 ring-gray-900/10 text-gray-500 rounded-lg shadow-sm dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:text-gray-400" />
+    <input type="text" placeholder="Custom focus styles" class="font-sans block text-sm w-full py-2 px-3 ring-1 ring-gray-900/10 text-gray-500 rounded-lg shadow-sm focus:outline-none focus:ring focus:ring-blue-300 focus:border-blue-500 dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:text-gray-400 dark:focus:ring dark:focus:ring-blue-300" />
   </div>
 </Example>
 
