--- a/src/pages/docs/pointer-events.mdx
+++ b/src/pages/docs/pointer-events.mdx
@@ -28,7 +28,7 @@ Use `pointer-events-none` to make an element ignore pointer events. The pointer 
             <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
           </svg>
         </div>
-        <input type="text" placeholder="Search" class="font-sans block text-sm w-full pl-10 py-2 px-3 ring-1 ring-gray-900/10 text-gray-500 rounded-lg" />
+        <input type="text" placeholder="Search" class="font-sans block text-sm w-full pl-10 py-2 px-3 ring-1 ring-gray-900/10 text-gray-500 rounded-lg dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:text-gray-400" />
       </div>
     </div>
     <div class="flex flex-col">
@@ -39,7 +39,7 @@ Use `pointer-events-none` to make an element ignore pointer events. The pointer 
             <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
           </svg>
         </div>
-        <input type="text" placeholder="Search" class="font-sans block text-sm w-full pl-10 py-2 px-3 ring-1 ring-gray-900/10 text-gray-500 rounded-lg" />
+        <input type="text" placeholder="Search" class="font-sans block text-sm w-full pl-10 py-2 px-3 ring-1 ring-gray-900/10 text-gray-500 rounded-lg dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:text-gray-400" />
       </div>
     </div>
   </div>
