--- a/src/pages/docs/scroll-snap-stop.mdx
+++ b/src/pages/docs/scroll-snap-stop.mdx
@@ -19,7 +19,7 @@ Use the `snap-always` utility together with the `snap-mandatory` utility to forc
 <Example p="none" hint="Scroll in the grid of images to see the expected behaviour">
   <!-- Snap Point -->
   <div class="flex ml-[50%] items-end justify-start pt-10 mb-6">
-    <div class="ml-2 rounded font-mono text-[0.625rem] leading-6 px-1.5 ring-1 ring-inset bg-indigo-50 text-indigo-600 ring-indigo-600">snap point</div>
+    <div class="ml-2 rounded font-mono text-[0.625rem] leading-6 px-1.5 ring-1 ring-inset bg-indigo-50 text-indigo-600 ring-indigo-600 dark:bg-indigo-500 dark:ring-0 dark:text-white dark:highlight-white/10">snap point</div>
     <div class="absolute top-0 bottom-0 left-1/2 border-l border-indigo-500"></div>
   </div>
   <!-- Contents -->
@@ -81,7 +81,7 @@ Use the `snap-normal` utility to allow a snap container to skip past possible sc
 <Example p="none" hint="Scroll in the grid of images to see the expected behaviour">
   <!-- Snap Point -->
   <div class="flex ml-[50%] items-end justify-start pt-10 mb-6">
-    <div class="ml-2 rounded font-mono text-[0.625rem] leading-6 px-1.5 ring-1 ring-inset bg-indigo-50 text-indigo-600 ring-indigo-600">snap point</div>
+    <div class="ml-2 rounded font-mono text-[0.625rem] leading-6 px-1.5 ring-1 ring-inset bg-indigo-50 text-indigo-600 ring-indigo-600 dark:bg-indigo-500 dark:ring-0 dark:text-white dark:highlight-white/10">snap point</div>
     <div class="absolute top-0 bottom-0 left-1/2 border-l border-indigo-500"></div>
   </div>
   <!-- Contents -->
