--- a/src/pages/docs/text-decoration-color.mdx
+++ b/src/pages/docs/text-decoration-color.mdx
@@ -18,8 +18,8 @@ export const classes = { utilities }
 Use the `decoration-{color}` utilities to change the color of an element's [text decoration](/docs/text-decoration).
 
 <Example p="none">
-  <div class="bg-white p-8 text-gray-900 shadow-lg max-w-sm mx-auto text-sm leading-6 sm:text-base sm:leading-7">
-    <p class="text-sm leading-6">I’m Derek, an astro-engineer based in Tattooine. I like to build X-Wings at <a href="#" class="font-bold underline decoration-sky-500 decoration-2">My Company, Inc</a>. Outside of work, I like to <a href="#" class="font-bold underline decoration-pink-500 decoration-2">watch pod-racing</a> and have <a href="#" class="font-bold underline decoration-indigo-500 decoration-2">light-saber</a> fights.</p>
+  <div class="bg-white p-8 text-gray-900 shadow-lg max-w-sm mx-auto text-sm leading-6 sm:text-base sm:leading-7 dark:bg-gray-800 dark:text-gray-400">
+    <p class="text-sm leading-6">I’m Derek, an astro-engineer based in Tattooine. I like to build X-Wings at <a href="#" class="font-bold underline decoration-sky-500 decoration-2 dark:text-gray-200">My Company, Inc</a>. Outside of work, I like to <a href="#" class="font-bold underline decoration-pink-500 decoration-2 dark:text-gray-200">watch pod-racing</a> and have <a href="#" class="font-bold underline decoration-indigo-500 decoration-2 dark:text-gray-200">light-saber</a> fights.</p>
   </div>
 </Example>
 
@@ -39,8 +39,8 @@ Use the `decoration-{color}` utilities to change the color of an element's [text
 Control the opacity of an element's text decoration color using the color opacity modifier.
 
 <Example p="none">
-  <div class="bg-white p-8 text-gray-900 shadow-lg max-w-sm mx-auto text-sm leading-6 sm:text-base sm:leading-7">
-    <p class="text-sm leading-6">I’m Derek, an astro-engineer based in Tattooine. I like to build X-Wings at <a href="#" class="font-bold underline decoration-sky-500/30 decoration-2">My Company, Inc</a>. Outside of work, I like to <a href="#" class="font-bold underline decoration-pink-500/30 decoration-2">watch pod-racing</a> and have <a href="#" class="font-bold underline decoration-indigo-500/30 decoration-2">light-saber</a> fights.</p>
+  <div class="bg-white p-8 text-gray-900 shadow-lg max-w-sm mx-auto text-sm leading-6 sm:text-base sm:leading-7 dark:bg-gray-800 dark:text-gray-400">
+    <p class="text-sm leading-6">I’m Derek, an astro-engineer based in Tattooine. I like to build X-Wings at <a href="#" class="font-bold underline decoration-sky-500/30 decoration-2 dark:text-gray-200">My Company, Inc</a>. Outside of work, I like to <a href="#" class="font-bold underline decoration-pink-500/30 decoration-2 dark:text-gray-200">watch pod-racing</a> and have <a href="#" class="font-bold underline decoration-indigo-500/30 decoration-2 dark:text-gray-200">light-saber</a> fights.</p>
   </div>
 </Example>
 
