--- a/src/pages/docs/text-overflow.mdx
+++ b/src/pages/docs/text-overflow.mdx
@@ -26,7 +26,7 @@ Use `truncate` to truncate overflowing text with an ellipsis (<code>…</code>) 
 
 <Example p="none">
   <div class="px-4 sm:px-0">
-    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-700 text-sm leading-6 sm:text-base sm:leading-7">
+    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-700 text-sm leading-6 sm:text-base sm:leading-7 dark:bg-gray-800 dark:text-gray-400">
       <p class="truncate">
         The longest word in any of the major English language dictionaries is <span class="text-gray-900 font-medium">pneumonoultramicroscopicsilicovolcanoconiosis,</span> a word that refers to a lung disease contracted from the inhalation of very fine silica particles, specifically from a volcano; medically, it is the same as silicosis.
       </p>
@@ -44,9 +44,9 @@ Use `text-ellipsis` to truncate overflowing text with an ellipsis (<code>…</co
 
 <Example p="none">
   <div class="px-4 sm:px-0">
-    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-700 text-sm leading-6 sm:text-base sm:leading-7">
+    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-700 text-sm leading-6 sm:text-base sm:leading-7 dark:bg-gray-800 dark:text-gray-400">
       <p class="text-ellipsis overflow-hidden">
-        The longest word in any of the major English language dictionaries is <span class="text-gray-900 font-medium">pneumonoultramicroscopicsilicovolcanoconiosis,</span> a word that refers to a lung disease contracted from the inhalation of very fine silica particles, specifically from a volcano; medically, it is the same as silicosis.
+        The longest word in any of the major English language dictionaries is <span class="text-gray-900 font-medium dark:text-gray-200">pneumonoultramicroscopicsilicovolcanoconiosis,</span> a word that refers to a lung disease contracted from the inhalation of very fine silica particles, specifically from a volcano; medically, it is the same as silicosis.
       </p>
     </div>
   </div>
@@ -62,9 +62,9 @@ Use `text-clip` to truncate the text at the limit of the content area.
 
 <Example p="none">
   <div class="px-4 sm:px-0">
-    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-700 text-sm leading-6 sm:text-base sm:leading-7">
+    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-700 text-sm leading-6 sm:text-base sm:leading-7 dark:bg-gray-800 dark:text-gray-400">
       <p class="text-clip overflow-hidden">
-        The longest word in any of the major English language dictionaries is <span class="text-gray-900 font-medium">pneumonoultramicroscopicsilicovolcanoconiosis,</span> a word that refers to a lung disease contracted from the inhalation of very fine silica particles, specifically from a volcano; medically, it is the same as silicosis.
+        The longest word in any of the major English language dictionaries is <span class="text-gray-900 font-medium dark:text-gray-200">pneumonoultramicroscopicsilicovolcanoconiosis,</span> a word that refers to a lung disease contracted from the inhalation of very fine silica particles, specifically from a volcano; medically, it is the same as silicosis.
       </p>
     </div>
   </div>
