--- a/src/pages/docs/user-select.mdx
+++ b/src/pages/docs/user-select.mdx
@@ -18,7 +18,7 @@ Use `select-none` to prevent selecting text in an element and its children.
 
 <Example hint="Try selecting the text to see the expected behaviour">
   <div class="flex justify-center">
-    <div class="select-none inline-flex text-center bg-white text-gray-900 font-semibold font-sans text-sm shadow-lg rounded-lg ring-1 ring-gray-900/5 px-4 py-3">
+    <div class="select-none inline-flex text-center bg-white text-gray-900 font-semibold font-sans text-sm shadow-lg rounded-lg ring-1 ring-gray-900/5 px-4 py-3 dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:text-gray-200">
       The quick brown fox jumps over the lazy dog.
     </div>
   </div>
@@ -36,7 +36,7 @@ Use `select-text` to allow selecting text in an element and its children.
 
 <Example hint="Try selecting the text to see the expected behaviour">
   <div class="flex justify-center">
-    <div class="select-text inline-flex text-center bg-white text-gray-900 font-semibold font-sans text-sm shadow-lg rounded-lg ring-1 ring-gray-900/5 px-4 py-3">
+    <div class="select-text inline-flex text-center bg-white text-gray-900 font-semibold font-sans text-sm shadow-lg rounded-lg ring-1 ring-gray-900/5 px-4 py-3 dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:text-gray-200">
       The quick brown fox jumps over the lazy dog.
     </div>
   </div>
@@ -54,7 +54,7 @@ Use `select-all` to automatically select all the text in an element when a user 
 
 <Example hint="Try selecting the text to see the expected behaviour">
   <div class="flex justify-center">
-    <div class="select-all inline-flex text-center bg-white text-gray-900 font-semibold font-sans text-sm shadow-lg rounded-lg ring-1 ring-gray-900/5 px-4 py-3">
+    <div class="select-all inline-flex text-center bg-white text-gray-900 font-semibold font-sans text-sm shadow-lg rounded-lg ring-1 ring-gray-900/5 px-4 py-3 dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:text-gray-200">
       The quick brown fox jumps over the lazy dog.
     </div>
   </div>
@@ -72,7 +72,7 @@ Use `select-auto` to use the default browser behavior for selecting text. Useful
 
 <Example hint="Try selecting the text to see the expected behaviour">
   <div class="flex justify-center">
-    <div class="select-auto inline-flex text-center bg-white text-gray-900 font-semibold font-sans text-sm shadow-lg rounded-lg ring-1 ring-gray-900/5 px-4 py-3">
+    <div class="select-auto inline-flex text-center bg-white text-gray-900 font-semibold font-sans text-sm shadow-lg rounded-lg ring-1 ring-gray-900/5 px-4 py-3 dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:text-gray-200">
       The quick brown fox jumps over the lazy dog.
     </div>
   </div>
