--- a/src/pages/docs/vertical-align.mdx
+++ b/src/pages/docs/vertical-align.mdx
@@ -17,13 +17,13 @@ export const classes = { utilities }
 Use `align-baseline` to align the baseline of an element with the baseline of its parent.
 
 <Example>
-  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto">
+  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto dark:bg-gray-800 dark:ring-0 dark:highlight-white/5">
     <div class="leading-none relative">
       <span class="w-0 h-8 inline-block align-baseline">
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8"></span>
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-4"></span>
+        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8 dark:border-gray-700"></span>
+        <span class="absolute top-0 border-gray-200 border-b border-dashed w-full h-4 dark:border-gray-700"></span>
       </span>
-      <span class="relative z-10 text-gray-700 font-medium px-4">The quick brown fox jumps over the lazy dog.</span>
+      <span class="relative z-10 text-gray-700 font-medium px-4 dark:text-gray-200">The quick brown fox jumps over the lazy dog.</span>
     </div>
   </div>
 </Example>
@@ -37,13 +37,13 @@ Use `align-baseline` to align the baseline of an element with the baseline of it
 Use `align-top` to align the top of an element and its descendants with the top of the entire line.
 
 <Example>
-  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto">
+  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto dark:bg-gray-800 dark:ring-0 dark:highlight-white/5">
     <div class="leading-none relative">
       <span class="w-0 h-8 inline-block align-top">
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8"></span>
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-4"></span>
+        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8 dark:border-gray-700"></span>
+        <span class="absolute top-0 border-gray-200 border-b border-dashed w-full h-4 dark:border-gray-700"></span>
       </span>
-      <span class="relative z-10 text-gray-700 font-medium px-4">The quick brown fox jumps over the lazy dog.</span>
+      <span class="relative z-10 text-gray-700 font-medium px-4 dark:text-gray-200">The quick brown fox jumps over the lazy dog.</span>
     </div>
   </div>
 </Example>
@@ -58,13 +58,13 @@ Use `align-top` to align the top of an element and its descendants with the top 
 Use `align-middle` to align the middle of an element with the baseline plus half the x-height of the parent.
 
 <Example>
-  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto">
+  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto dark:bg-gray-800 dark:ring-0 dark:highlight-white/5">
     <div class="leading-none relative">
       <span class="w-0 h-8 inline-block align-middle">
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8"></span>
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-4"></span>
+        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8 dark:border-gray-700"></span>
+        <span class="absolute top-0 border-gray-200 border-b border-dashed w-full h-4 dark:border-gray-700"></span>
       </span>
-      <span class="relative z-10 text-gray-700 font-medium px-4">The quick brown fox jumps over the lazy dog.</span>
+      <span class="relative z-10 text-gray-700 font-medium px-4 dark:text-gray-200">The quick brown fox jumps over the lazy dog.</span>
     </div>
   </div>
 </Example>
@@ -78,13 +78,13 @@ Use `align-middle` to align the middle of an element with the baseline plus half
 Use `align-bottom` to align the bottom of an element and its descendants with the bottom of the entire line.
 
 <Example>
-  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto">
+  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto dark:bg-gray-800 dark:ring-0 dark:highlight-white/5">
     <div class="leading-none relative">
       <span class="w-0 h-8 inline-block align-bottom">
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8"></span>
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-4"></span>
+        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8 dark:border-gray-700"></span>
+        <span class="absolute top-0 border-gray-200 border-b border-dashed w-full h-4 dark:border-gray-700"></span>
       </span>
-      <span class="relative z-10 text-gray-700 font-medium px-4">The quick brown fox jumps over the lazy dog.</span>
+      <span class="relative z-10 text-gray-700 font-medium px-4 dark:text-gray-200">The quick brown fox jumps over the lazy dog.</span>
     </div>
   </div>
 </Example>
@@ -98,13 +98,13 @@ Use `align-bottom` to align the bottom of an element and its descendants with th
 Use `align-text-top` to align the top of an element with the top of the parent element's font.
 
 <Example>
-  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto">
+  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto dark:bg-gray-800 dark:ring-0 dark:highlight-white/5">
     <div class="leading-none relative">
       <span class="w-0 h-8 inline-block align-text-top">
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8"></span>
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-4"></span>
+        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8 dark:border-gray-700"></span>
+        <span class="absolute top-0 border-gray-200 border-b border-dashed w-full h-4 dark:border-gray-700"></span>
       </span>
-      <span class="relative z-10 text-gray-700 font-medium px-4">The quick brown fox jumps over the lazy dog.</span>
+      <span class="relative z-10 text-gray-700 font-medium px-4 dark:text-gray-200">The quick brown fox jumps over the lazy dog.</span>
     </div>
   </div>
 </Example>
@@ -118,13 +118,13 @@ Use `align-text-top` to align the top of an element with the top of the parent e
 Use `align-text-bottom` to align the bottom of an element with the bottom of the parent element's font.
 
 <Example>
-  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto">
+  <div class="bg-white rounded-lg shadow-lg ring-1 ring-gray-900/5 py-4 max-w-md mx-auto dark:bg-gray-800 dark:ring-0 dark:highlight-white/5">
     <div class="leading-none relative">
       <span class="w-0 h-8 inline-block align-text-bottom">
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8"></span>
-        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-4"></span>
+        <span class="absolute top-0 border-gray-200 border-t border-b border-dashed w-full h-8 dark:border-gray-700"></span>
+        <span class="absolute top-0 border-gray-200 border-b border-dashed w-full h-4 dark:border-gray-700"></span>
       </span>
-      <span class="relative z-10 text-gray-700 font-medium px-4">The quick brown fox jumps over the lazy dog.</span>
+      <span class="relative z-10 text-gray-700 font-medium px-4 dark:text-gray-200">The quick brown fox jumps over the lazy dog.</span>
     </div>
   </div>
 </Example>
