--- a/src/pages/docs/whitespace.mdx
+++ b/src/pages/docs/whitespace.mdx
@@ -16,7 +16,7 @@ export const classes = { utilities }
 Use `whitespace-normal` to cause text to wrap normally within an element. Newlines and spaces will be collapsed.
 
 <Example p="none">
-  <div class="bg-white p-8 shadow-xl text-gray-700 max-w-md mx-auto overflow-auto text-sm leading-6 sm:text-base sm:leading-7">
+  <div class="bg-white p-8 shadow-xl text-gray-700 max-w-md mx-auto overflow-auto text-sm leading-6 sm:text-base sm:leading-7 dark:bg-gray-800 dark:text-gray-400">
     <div class="whitespace-normal">Hey everyone!
 It's almost 2022       and we still don't know if there is aliens living among us, or do we? Maybe the person writing this is an alien.
 You will never know.</div>
@@ -38,7 +38,7 @@ You will never know.</div>
 Use `whitespace-nowrap` to prevent text from wrapping within an element. Newlines and spaces will be collapsed.
 
 <Example p="none">
-  <div class="bg-white px-6 py-8 shadow-xl text-gray-700 max-w-md mx-auto overflow-auto text-sm leading-6 sm:text-base sm:leading-7">
+  <div class="bg-white px-6 py-8 shadow-xl text-gray-700 max-w-md mx-auto overflow-auto text-sm leading-6 sm:text-base sm:leading-7 dark:bg-gray-800 dark:text-gray-400">
     <div class="whitespace-nowrap">Hey everyone!
 It's almost 2022       and we still don't know if there is aliens living among us, or do we? Maybe the person writing this is an alien.
 You will never know.</div>
@@ -60,7 +60,7 @@ You will never know.</div>
 Use `whitespace-pre` to preserve newlines and spaces within an element. Text will not be wrapped.
 
 <Example p="none">
-  <div class="bg-white px-6 py-8 shadow-xl text-gray-700 max-w-md mx-auto overflow-auto text-sm leading-6 sm:text-base sm:leading-7">
+  <div class="bg-white px-6 py-8 shadow-xl text-gray-700 max-w-md mx-auto overflow-auto text-sm leading-6 sm:text-base sm:leading-7 dark:bg-gray-800 dark:text-gray-400">
     <div class="whitespace-pre">Hey everyone!<br>
 It's almost 2022       and we still don't know if there is aliens living among us, or do we? Maybe the person writing this is an alien.</br>
 You will never know.</div>
@@ -82,7 +82,7 @@ You will never know.</div>
 Use `whitespace-pre-line` to preserve newlines but not spaces within an element. Text will be wrapped normally.
 
 <Example p="none">
-  <div class="bg-white px-6 py-8 shadow-xl text-gray-700 max-w-md mx-auto overflow-auto text-sm leading-6 sm:text-base sm:leading-7">
+  <div class="bg-white px-6 py-8 shadow-xl text-gray-700 max-w-md mx-auto overflow-auto text-sm leading-6 sm:text-base sm:leading-7 dark:bg-gray-800 dark:text-gray-400">
     <div class="whitespace-pre-line">Hey everyone!<br>
 It's almost 2022       and we still don't know if there is aliens living among us, or do we? Maybe the person writing this is an alien.</br>
 You will never know.</div>
@@ -104,7 +104,7 @@ You will never know.</div>
 Use `whitespace-pre-wrap` to preserve newlines and spaces within an element. Text will be wrapped normally.
 
 <Example p="none">
-  <div class="bg-white px-6 py-8 shadow-xl text-gray-700 max-w-md mx-auto overflow-auto text-sm leading-6 sm:text-base sm:leading-7">
+  <div class="bg-white px-6 py-8 shadow-xl text-gray-700 max-w-md mx-auto overflow-auto text-sm leading-6 sm:text-base sm:leading-7 dark:bg-gray-800 dark:text-gray-400">
     <div class="whitespace-pre-wrap">Hey everyone!<br>
 It's almost 2022       and we still don't know if there is aliens living among us, or do we? Maybe the person writing this is an alien.</br>
 You will never know.</div>
