--- a/src/pages/docs/word-break.mdx
+++ b/src/pages/docs/word-break.mdx
@@ -17,9 +17,9 @@ Use `break-normal` to only add line breaks at normal word break points.
 
 <Example p="none">
   <div class="overflow-x-scroll sm:overflow-x-visible px-4">
-    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-500">
+    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-500 dark:bg-gray-800 dark:text-gray-400">
       <p class="break-normal">The longest word in any of the major English language dictionaries is
-      <span class="text-gray-900 font-medium">pneumonoultramicroscopicsilicovolcanoconiosis,</span>
+      <span class="text-gray-900 font-medium dark:text-gray-200">pneumonoultramicroscopicsilicovolcanoconiosis,</span>
       a word that refers to a lung disease contracted from the inhalation of very fine silica particles, specifically from a volcano; medically, it is the same as silicosis.</p>
     </div>
   </div>
@@ -35,9 +35,9 @@ Use `break-words` to add line breaks mid-word if needed.
 
 <Example p="none">
   <div class="px-4">
-    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-500">
+    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-500 dark:bg-gray-800 dark:text-gray-400">
       <p class="break-words">The longest word in any of the major English language dictionaries is
-      <span class="text-gray-900 font-medium">pneumonoultramicroscopicsilicovolcanoconiosis,</span>
+      <span class="text-gray-900 font-medium dark:text-gray-200">pneumonoultramicroscopicsilicovolcanoconiosis,</span>
       a word that refers to a lung disease contracted from the inhalation of very fine silica particles, specifically from a volcano; medically, it is the same as silicosis.</p>
     </div>
   </div>
@@ -53,9 +53,9 @@ Use `break-all` to add line breaks whenever necessary, without trying to preserv
 
 <Example p="none">
   <div class="px-4">
-    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-500">
+    <div class="mx-auto max-w-sm bg-white shadow-xl p-8 text-gray-500 dark:bg-gray-800 dark:text-gray-400">
       <p class="break-all">The longest word in any of the major English language dictionaries is
-      <span class="text-gray-900 font-medium">pneumonoultramicroscopicsilicovolcanoconiosis,</span>
+      <span class="text-gray-900 font-medium dark:text-gray-200">pneumonoultramicroscopicsilicovolcanoconiosis,</span>
       a word that refers to a lung disease contracted from the inhalation of very fine silica particles, specifically from a volcano; medically, it is the same as silicosis.</p>
     </div>
   </div>
