--- a/src/pages/docs/font-size.mdx
+++ b/src/pages/docs/font-size.mdx
@@ -20,31 +20,31 @@ Control the font size of an element using the `text-{size}` utilities.
   <div class="flex flex-col gap-8">
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">text-sm</span>
-      <p class="text-sm font-medium text-gray-900">
+      <p class="text-sm font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">text-base</span>
-      <p class="text-base font-medium text-gray-900">
+      <p class="text-base font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">text-lg</span>
-      <p class="text-lg font-medium text-gray-900">
+      <p class="text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">text-xl</span>
-      <p class="text-xl font-medium text-gray-900">
+      <p class="text-xl font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">text-2xl</span>
-      <p class="text-2xl font-medium text-gray-900">
+      <p class="text-2xl font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
