--- a/src/pages/docs/font-weight.mdx
+++ b/src/pages/docs/font-weight.mdx
@@ -20,31 +20,31 @@ Control the font weight of an element using the `font-{weight}` utilities.
   <div class="flex flex-col gap-8">
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">font-light</span>
-      <p class="font-light text-lg text-gray-900">
+      <p class="font-light text-lg text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">font-normal</span>
-      <p class="font-normal text-lg text-gray-900">
+      <p class="font-normal text-lg text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">font-medium</span>
-      <p class="font-medium text-lg text-gray-900">
+      <p class="font-medium text-lg text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">font-semibold</span>
-      <p class="font-semibold text-lg text-gray-900">
+      <p class="font-semibold text-lg text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">font-bold</span>
-      <p class="font-bold text-lg text-gray-900">
+      <p class="font-bold text-lg text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
