--- a/src/pages/docs/letter-spacing.mdx
+++ b/src/pages/docs/letter-spacing.mdx
@@ -21,19 +21,19 @@ Control the letter spacing of an element using the `tracking-{size}` utilities.
   <div class="flex flex-col gap-8">
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">tracking-tight</span>
-      <p class="tracking-tight text-lg font-medium text-gray-900">
+      <p class="tracking-tight text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">tracking-normal</span>
-      <p class="tracking-normal text-lg font-medium text-gray-900">
+      <p class="tracking-normal text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-gray-500 font-mono mb-3">tracking-wide</span>
-      <p class="tracking-wide text-lg font-medium text-gray-900">
+      <p class="tracking-wide text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
