--- a/src/pages/docs/scroll-snap-align.mdx
+++ b/src/pages/docs/scroll-snap-align.mdx
@@ -20,7 +20,7 @@ Use the `snap-center` utility to snap an element to its center when being scroll
   <div class="relative">
     <!-- Snap Point -->
     <div class="flex ml-[50%] items-end justify-start pt-10 mb-6">
-      <div class="ml-2 rounded font-mono text-[0.625rem] leading-6 px-1.5 ring-1 ring-inset bg-indigo-50 text-indigo-600 ring-indigo-600">snap point</div>
+      <div class="ml-2 rounded font-mono text-[0.625rem] leading-6 px-1.5 ring-1 ring-inset bg-indigo-50 text-indigo-600 ring-indigo-600 dark:bg-indigo-500 dark:ring-0 dark:text-white dark:highlight-white/10">snap point</div>
       <div class="absolute top-0 bottom-0 left-1/2 border-l border-indigo-500"></div>
     </div>
     <!-- Contents -->
@@ -83,7 +83,7 @@ Use the `snap-start` utility to snap an element to its start when being scrolled
 <Example p="none" hint="Scroll in the grid of images to see the expected behaviour">
   <!-- Snap Point -->
   <div class="ml-6 flex items-end justify-start pt-10 mb-6">
-    <div class="ml-2 rounded font-mono text-[0.625rem] leading-6 px-1.5 ring-1 ring-inset bg-indigo-50 text-indigo-600 ring-indigo-600">snap point</div>
+    <div class="ml-2 rounded font-mono text-[0.625rem] leading-6 px-1.5 ring-1 ring-inset bg-indigo-50 text-indigo-600 ring-indigo-600 dark:bg-indigo-500 dark:ring-0 dark:text-white dark:highlight-white/10">snap point</div>
     <div class="absolute top-0 bottom-0 left-6 border-l border-indigo-500"></div>
   </div>
   <!-- Contents -->
@@ -142,7 +142,7 @@ Use the `snap-end` utility to snap an element to its end when being scrolled ins
 <Example p="none" hint="Scroll in the grid of images to see the expected behaviour">
   <!-- Snap Point -->
   <div class="mr-6 flex items-end justify-end pt-10 mb-6">
-    <div class="mr-2 rounded font-mono text-[0.625rem] leading-6 px-1.5 ring-1 ring-inset bg-indigo-50 text-indigo-600 ring-indigo-600">snap point</div>
+    <div class="mr-2 rounded font-mono text-[0.625rem] leading-6 px-1.5 ring-1 ring-inset bg-indigo-50 text-indigo-600 ring-indigo-600 dark:bg-indigo-500 dark:ring-0 dark:text-white dark:highlight-white/10">snap point</div>
     <div class="absolute top-0 bottom-0 right-6 border-l border-indigo-500"></div>
   </div>
   <!-- Contents -->
