--- a/src/pages/docs/text-decoration-style.mdx
+++ b/src/pages/docs/text-decoration-style.mdx
@@ -17,26 +17,26 @@ export const classes = { utilities }
 Use the `decoration-{style}` utilities to change the style of an element's [text decoration](/docs/text-decoration).
 
 <Example>
-  <div class="flex flex-col gap-8 text-gray-900">
+  <div class="flex flex-col gap-8 text-gray-900 dark:text-gray-200">
     <div>
       <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-solid</div>
-      <p class="text-lg font-medium underline decoration-gray-900 decoration-solid">The quick brown fox jumps over the lazy dog.</p>
+      <p class="text-lg font-medium underline decoration-solid">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
       <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-double</div>
-      <p class="text-lg font-medium underline decoration-gray-900 decoration-double">The quick brown fox jumps over the lazy dog.</p>
+      <p class="text-lg font-medium underline decoration-double">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
       <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-dotted</div>
-      <p class="text-lg font-medium underline decoration-gray-900 decoration-dotted">The quick brown fox jumps over the lazy dog.</p>
+      <p class="text-lg font-medium underline decoration-dotted">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
       <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-dashed</div>
-      <p class="text-lg font-medium underline decoration-gray-900 decoration-dashed">The quick brown fox jumps over the lazy dog.</p>
+      <p class="text-lg font-medium underline decoration-dashed">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
       <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-wavy</div>
-      <p class="text-lg font-medium underline decoration-gray-900 decoration-wavy">The quick brown fox jumps over the lazy dog.</p>
+      <p class="text-lg font-medium underline decoration-wavy">The quick brown fox jumps over the lazy dog.</p>
     </div>
   </div>
 </Example>
