--- a/src/pages/docs/text-underline-offset.mdx
+++ b/src/pages/docs/text-underline-offset.mdx
@@ -22,22 +22,22 @@ export const classes = {
 Use the `underline-offset-{width}` utilities to change the offset of a text underline.
 
 <Example>
-  <div class="flex flex-col gap-8 text-gray-900">
+  <div class="flex flex-col gap-8 text-gray-900 dark:text-gray-200">
     <div>
       <div class="font-medium text-sm text-gray-500 font-mono mb-3">underline-offset-1</div>
-      <p class="text-lg font-medium underline decoration-gray-900 underline-offset-1">The quick brown fox jumps over the lazy dog.</p>
+      <p class="text-lg font-medium underline underline-offset-1">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
       <div class="font-medium text-sm text-gray-500 font-mono mb-3">underline-offset-2</div>
-      <p class="text-lg font-medium underline decoration-gray-900 underline-offset-2">The quick brown fox jumps over the lazy dog.</p>
+      <p class="text-lg font-medium underline underline-offset-2">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
       <div class="font-medium text-sm text-gray-500 font-mono mb-3">underline-offset-4</div>
-      <p class="text-lg font-medium underline decoration-gray-900 underline-offset-4">The quick brown fox jumps over the lazy dog.</p>
+      <p class="text-lg font-medium underline underline-offset-4">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
       <div class="font-medium text-sm text-gray-500 font-mono mb-3">underline-offset-8</div>
-      <p class="text-lg font-medium underline decoration-gray-900 underline-offset-8">The quick brown fox jumps over the lazy dog.</p>
+      <p class="text-lg font-medium underline underline-offset-8">The quick brown fox jumps over the lazy dog.</p>
     </div>
   </div>
 </Example>
